samples/_failures_safe/1761336523_f6908c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c06de59.c: In function ‘main’:
./samples/SAFE/__tmp_6c06de59.c:151:34: error: expected ‘;’ at end of input
  151 |                         found = 1
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_6c06de59.c:151:25: error: expected declaration or statement at end of input
  151 |                         found = 1
      |                         ^~~~~
./samples/SAFE/__tmp_6c06de59.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c06de59.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c06de59.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c06de59.c:151:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6c06de59.c:151:25: error: expected declaration or statement at end of input
